propriedades de texto no CSS

--- a/Fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -4,14 +4,29 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
-        h1 {color: orange; font-size: 65px;
+        h1 {
+            color: orange; font-size: 65px; font-family: sans-serif; font-weight: 600;
 
         }
-        ul {background-color:orange;
+        ul {
+            background-color:orange;
 
         }
-        .corpul {color: rgb(0, 0, 0);
+        .corpul {
+            color: rgb(0, 0, 0);
 
+        }
+        body {
+            font-size: 16px; font-style: italic; line-height: 30px; text-align: center;
+        }
+        #item1 {
+            background-color: yellow;
+        }
+        #item2 {
+            background-color: red;
+        }
+        #item3 {
+            background-color: brown;
         }
     </style>
   </head>
@@ -19,9 +34,9 @@
     <h1> Exercícios 3.2</h1>
     <p class="corpul">Qual é a sua cor favorita?</p>
     <ul class="corpul">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="item1">Amarelo</li>
+      <li id="item2">Vermelho</li>
+      <li id="item3">Marrom</li>
     </ul>
   </body>
 </html>
