--- a/Fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/Fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style>
+  <link rel="stylesheet" type="text/css" href="style.css">
+   <!-- <style>
         h1 {
             color: orange; font-size: 65px; font-family: sans-serif; font-weight: 600;
 
@@ -28,7 +29,8 @@
         #item3 {
             background-color: brown;
         }
-    </style>
+    </style> -->
+
   </head>
   <body>
     <h1> Exercícios 3.2</h1>
