--- a/Fundamentos/bloco-4-DOM-e-Objetos4.5/pilotos.html
+++ b/Fundamentos/bloco-4-DOM-e-Objetos4.5/pilotos.html
@@ -8,10 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-    <p class="lenda">Ayrton Senna</p>
-    <p class="piloto-f1-atual">Lewis Hammilton</p>
-    <p class="piloto-f1-atual">Sebastian Vettel</p>
-    <p class="piloto-f1-atual">Lando Norris</p>
+    <div class="pilotos-com-titulo">
+        <p class="lenda">Ayrton Senna</p>
+        <p class="piloto-f1-atual">Lewis Hammilton</p>
+        <p class="piloto-f1-atual">Sebastian Vettel</p>
+    </div>
+    <div class="pilotos-sem-titulo">
+        <p class="piloto-f1-atual">Lando Norris</p>
+        <div class="piloto-f1-atual">George Russel</div>
+        <div class="piloto-f1-atual">Daniel Ricardo</div>
+        <span class="piloto-f1-atual">Kevin Magnussen</span>
+    </div>
+
+    <p id="Dona">Liberty Media</p>
     <script src="pilotos.js"></script>
 </body>
 </html>
